filer/private/sass/layout/_main.scss
/* ... */
.filter-files-cancel {
    margin: 5px 20px;
}

.navigator-table {
    tbody td {
        padding: 5px 10px !important;
    }
    .unfiled td {
        background-color: $gray-table !important;
    }
    .column-checkbox {
        text-align: center;
        width: 20px;
        padding-left: 20px !important;
        input {
            margin: 0;
        }
    }
    .column-icon {
        width: 25px;
        img {
            width: 25px;
        }
    }
    .column-action {
        text-align: center;
        width: 70px;
        padding-right: 20px !important;
        a {
            font-size: 16px !important;
            margin: 0 5px;
            &:first-child {
                margin-left: 0;
            }
            &:last-child {
                margin-right: 0;
            }
        }
        .icon {
            position: relative;
            top: 2px;
            width: 20px;
        }
    }
    .dz-drag-hover,
    &.dz-drag-hover {
        background: $hover-bg;
    }
}

.navigator-top-nav {
    position: relative;
    clear: both;
    min-height: 50px;
    padding: 5px 0;
    background: $gray-table;
    .breadcrumbs-container {
        float: left;
    }
    .nav-button {
        display: inline-block;
        color: $btn-default-color;
        font-size: 26px;
        vertical-align: top;
        margin: 0 10px;
    }
    .nav-button-filter {
        position: relative;
        top: -1px;
    }
    .nav-button-dots {
        margin: 0;
        padding: 0 15px;
    }
    .separator {
        display: inline-block;
        position: relative;
        vertical-align: top;
        width: 1px;
        height: 34px;
        margin: 0 5px;
        &:before {
            content: "";
            display: block;
            position: absolute;
            top: -14px;
            bottom: -11px;
            overflow: hidden;
            width: 1px;
            background-color: #ccc;
        }
    }
}
.navigator-tools {
    float: right;
    margin: 10px 20px 0 0;
}
@media screen and (max-width: $screen-tablet) {
    .navigator-top-nav {
        .breadcrumbs-container {
            float: none;
        }
        .navigator-tools {
            float: none;
            margin-left: 17px;
            .separator:before {
                top: 0;
                bottom: 0;
            }
        }
        .dropdown-container .dropdown-menu {
            right: auto;
            left: 0;
        }
    }
}
.navigator-button {
    margin-left: 10px;
    &,
    &:visited,
    &:link:visited,
    &:link {
        @include button-variant($btn-action-color, $btn-action-bgcolor, $btn-action-border, true);
        display: inline-block;
        vertical-align: top;
        padding: 10px 20px !important;
    }
    .icon {
        position: relative;
        margin-right: 5px;
    }
    .fa-folder {
        top: 0;
    }
}

.navigator-button + .dropdown-menu {
    margin-top: -2px;
}

.dropdown-container {
    display: inline-block;
    position: relative;
    top: 6px;
    vertical-align: top;
    .dropdown-menu {
        display: none;
        right: 0;
        left: auto;
        label {
            display: block;
            white-space: nowrap;
            text-transform: none;
            padding: 0 10px;
        }
        input {
            position: relative;
            top: 4px;
            vertical-align: top;
            margin-right: 5px;
        }
        &.dropdown-menu-checkboxes {
            right: 0;
            left: auto;
        }
    }
    &.open .dropdown-menu {
        display: block;
        li {
            margin: 0;
            padding: 0;
            list-style-type: none;
        }
    }
}
.dropdown-container-down {
    top: -5px;
    > a {
        &,
        &:link,
        &:visited,
        &:link:visited {
            color: $gray-light;
            font-size: 20px;
            line-height: 30px;
            height: 30px;
            padding: 0 10px;
        }
    }
    .dropdown-menu {
        right: auto;
        left: 0;
        margin-top: -3px;
    }
}

.navigator {
    position: relative;
    overflow-x: auto;
    width: 100%;
    form {
        margin: 0;
        padding: 0;
        box-shadow: none;
    }
}

.nav-pages {
    position: relative;
    padding: 10px 15px;
    background: #fff;
}

@media screen and (max-width: $screen-tablet) {
    .image-info {
        float: none;
        width: 100%;
        &.image-info-detail {
            .image-details-left,
            .image-details-right {
                float: none;
                margin-left: 0;
            }
        }
    }
}
#id_upload_button:before {
    display: none;
}
#container .breadcrumbs-container .breadcrumbs {
    top: -91px;
    right: 0;
    left: 0;
}

.app-filer #container .breadcrumbs {
    position: relative;
}

.app-filer #content {
    margin-top: 20px !important;
}

.filebrowser {
    &.popup #content {
        box-shadow: none;
    }
    #content {
        box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
    }
}

.filebrowser h1.folder_header {
    position: relative;
    top: 6px;
}

.filebrowser #container #content {
    margin-top: 90px !important;
}
.popup.filebrowser #container #content {
    margin-top: 10px !important;
}

.navigator-breadcrumbs {
    font-size: 16px;
    font-weight: bold;
    padding: 17px 0 0 20px;
    > a {
        color: $gray-darkest !important;
    }
    .icon {
        color: $gray-light;
        margin: 0 5px;
    }
}

.field-file,
.field-sha1 {
    word-wrap: break-word;
    word-break: break-all;
}

#content #content-main {
    margin-top: 0;
}
.related-lookup.hidden {
    display: none !important;
}
.well.img-preview {
    display: none;
    margin-top: 0;
}
.img-wrapper {
    width: 180px;
    height: 180px;
}
.dz-upload {
    height: 5px;
    background-color: #0bf;
}
.dz-name {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: calc(100% - 100px);
}
/* ... */

